Configure layouts for kitty
Reduced the number of available layouts to just the ones I like and add
a shortcut for toggling the stack (much like a zoom).

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -4,6 +4,8 @@
 # I'd like a non-linear mechanism to pick a layout, rather than cycling through
 # all of the layouts. I'm also not sure I need *all* of the layouts.
 
+enabled_layouts tall:mirrored=true,fat,grid,stack
+
 # Fonts {{{
 font_family JetBrainsMono Nerd Font
 font_size 11.0
@@ -31,6 +33,7 @@ listen_on unix:@mykitty
 #}}}
 
 # Keyboard Shortcuts {{{
+map ctrl+alt+z toggle_layout stack
 map ctrl+shift+enter new_window_with_cwd
 
 # https://github.com/knubie/vim-kitty-navigator
